<resources>
    <string name="app_name">IQ barSurfer</string>
    <string name="loadimage">loadimage\n</string>
    <string name="appName">IQ BAR SURFER</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_register">Click to Register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="something">something</string>
    <string name="logout">logout | Exit</string>
    <string name="submit">Submit | Dont Know</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question</string>
    <string name="take_quest">General IQ Test (10)</string>
    <string name="see_score">See Score</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="out_of_10_questions">Out of 10 questions</string>
    <string name="remember_iq_questions_can_vary_in_difficulty_and_may_not_solely_determine_a_person_s_intelligence">Remember, IQ questions can vary in difficulty and may not solely determine a person\'s intelligence.</string>
    <string name="more_iq_test_options_on_the_next_update">More IQ Test Options on the next update</string>
    <string name="what_number_comes_next_in_the_sequence_1_4_9_16_25">1) What number comes next in the sequence: 1, 4, 9, 16, 25, ...</string>
    <string name="_36">36</string>
    <string name="if_all_bloops_are_razzies_and_all_razzies_are_lazzies_then_which_of_the_following_statements_must_be_true">2) If all Bloops are Razzies and all Razzies are Lazzies, then which of the following statements must be true?</string>
    <string name="all_lazzies_are_razzies">All Lazzies are Razzies</string>
    <string name="which_of_the_following_words_is_the_odd_one_out">3) Which of the following words is the odd one out?</string>
    <string name="apple">Apple</string>
    <string name="a_plane_crashes_on_the_border_of_the_united_states_and_canada_where_do_they_bury_the_survivors">4) A plane crashes on the border of the United States and Canada. Where do they bury the survivors?</string>
    <string name="nowhere_you_don_t_bury_survivors">Nowhere, you don\'t bury survivors</string>
    <string name="if_you_rearrange_the_letters_noon_you_would_get_the_name_of_a">5) If you rearrange the letters \'NOON\', you would get the name of a:</string>
    <string name="time_of_day">Time of day</string>
    <string name="if_a_cat_is_worth_10_a_dog_is_worth_15_and_a_bird_is_worth_5_what_is_the_value_of_a_horse">6) If a cat is worth 10, a dog is worth 15, and a bird is worth 5, what is the value of a horse?</string>
    <string name="_25">25</string>
    <string name="how_many_times_can_you_subtract_10_from_100">7) How many times can you subtract 10 from 100?</string>
    <string name="once">Once</string>
    <string name="if_a_quarter_and_a_dime_were_in_your_pocket_and_you_took_out_a_nickel_how_much_money_would_you_have">8) If a quarter and a dime were in your pocket and you took out a nickel, how much money would you have?</string>
    <string name="_60_cents">60 cents</string>
    <string name="which_one_of_the_five_is_least_like_the_other_four">9) Which one of the five is least like the other four?</string>
    <string name="potato">Potato</string>
    <string name="if_you_rearrange_the_letters_eviction_you_would_get_the_name_of_a">10) If you rearrange the letters \'EVICTION,\' you would get the name of a:</string>
    <string name="profession">Profession</string>
    <string name="back">Back</string>
    <string name="see_answers">See Answers</string>
    <string name="user">User</string>
    <string name="welcome_to_iq_bar_surfer">Welcome to IQ Bar Surfer</string>
    <string name="leave">Leave</string>
    <string name="forgot_password_consider_registering_a_new_account_or_email_to_fnirmal802_gmail_com_with_your_email_adress_with_the_subject_account_recovery">Forgot password ? Consider registering a new account or email to fnirmal802@gmail.com with your email adress with the subject \'Account recovery\'</string>
    <string name="go_offline">Go Offline</string>
    <string name="login_and_register_for_futrure_newsletters_and_offers">Register and login for Futrure newsletters , updates and offers</string>
    <string name="general_iq_test">general IQ Test</string>
</resources>