<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".correctAnswers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/what_number_comes_next_in_the_sequence_1_4_9_16_25"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_36"
        />

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/if_all_bloops_are_razzies_and_all_razzies_are_lazzies_then_which_of_the_following_statements_must_be_true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_lazzies_are_razzies"
        />

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/which_of_the_following_words_is_the_odd_one_out"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple"
        />

    <TextView
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/a_plane_crashes_on_the_border_of_the_united_states_and_canada_where_do_they_bury_the_survivors"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowhere_you_don_t_bury_survivors"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/if_you_rearrange_the_letters_noon_you_would_get_the_name_of_a"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_of_day"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/if_a_cat_is_worth_10_a_dog_is_worth_15_and_a_bird_is_worth_5_what_is_the_value_of_a_horse"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/how_many_times_can_you_subtract_10_from_100"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/once"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/if_a_quarter_and_a_dime_were_in_your_pocket_and_you_took_out_a_nickel_how_much_money_would_you_have"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_60_cents"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/which_one_of_the_five_is_least_like_the_other_four"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potato"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/if_you_rearrange_the_letters_eviction_you_would_get_the_name_of_a"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10dp"
        />
</LinearLayout>