<!-- activity_score.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/woodentreeblack"
    android:padding="16dp"
    tools:context=".scoreDisplay">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="104sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:text="@string/out_of_10_questions"/>
    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="#155C13"
        android:text="@string/restart_quiz" />

    <Button
        android:id="@+id/seeAnswer"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#9A5D00"
        android:text="@string/see_answers" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_something"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        android:backgroundTint="#950000"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/logout"
        />


</LinearLayout>
